<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenglExpr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_single_traingle">Single Traingle</string>
    <string name="action_double_traingle">Double Traingle</string>
    <string name="action_quater">Quater</string>
    <string name="action_cubic_cone">Cubic Cone</string>
    <string name="action_cubic">Cubic</string>
    <string name="action_texture_piture">Texture Picture</string>

</resources>
